--- a/about.html
+++ b/about.html
@@ -115,7 +115,41 @@
         </div>
     </div>
 </section>
-                    
+
+ <!-- About section three-->
+ <section class="py-5 bg-light" id="scroll-target">
+    <div class="container px-5 my-5">
+        <div class="row gx-5 align-items-center">
+            <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." /></div>
+            <div class="col-lg-6">
+                <h2 class="fw-bolder">Gates &amp; Charging Modules</h2>
+                <p class="lead fw-normal text-muted mb-0"> Aluminum roller gates are powered by electric motors, integrated with the central
+                    computer.<br>
+                    Computer Modules use QI wireless charging stations.<br></p>
+            </div>
+        </div>
+    </div>
+</section>
+             
+<!-- About section two-->
+<section class="py-5">
+    <div class="container px-5 my-5">
+        <div class="row gx-5 align-items-center">
+            <div class="col-lg-6 order-first order-lg-last"><img class="img-fluid rounded mb-5 mb-lg-0" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." /></div>
+            <div class="col-lg-6">
+                <h2 class="fw-bolder">Space Organization &amp; Security</h2>
+                <p class="lead fw-normal text-muted mb-0">
+                    Data and power are managed via Ethernet cables.<br>
+                   Drones are equipped with cameras, motion detection, and biometric authentication
+                    using Aldahua ASI6214S systems.<br>
+
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
+
+
         </main>
         <!-- Footer-->
         <footer class="bg-dark py-4 mt-auto">
