--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                                     <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-puzzle-fill"></i></div>
                                     <h2 class="h5">Optimized Resource Utilization</h2>
                                     <p class="mb-0">Maximizes efficiency in using personnel and
-                                        equipment.</p>
+                                        equipment</p>
                                 </div>
                                 <div class="col mb-5 h-100">
                                     <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-hourglass-split"></i></div>
