--- a/contact.html
+++ b/contact.html
@@ -129,7 +129,7 @@
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
                     <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; Skynova 2024</div></div>
                     <div class="col-auto">
-                        <a class="link-light small" href="#!">Privacy Policy</a>
+                        <a class="link-light small" href="privacypolicy.html">Privacy Policy</a>
                     </div>
                 </div>
             </div>
