--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@
  <section class="py-5">
     <div class="container px-5 my-5">
         <div class="row gx-5 align-items-center">
-            <div class="col-lg-6 order-first order-lg-last"><img class="img-fluid rounded mb-5 mb-lg-0" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." /></div>
+            <div class="col-lg-6 order-first order-lg-last"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/ProjectOfSkyline.png" alt="..." /></div>
             <div class="col-lg-6">
                 <h2 class="fw-bolder">Space Organization &amp; Security</h2>
                 <p class="lead fw-normal text-muted mb-0">
@@ -131,7 +131,7 @@
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
                     <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; Skynova 2024</div></div>
                     <div class="col-auto">
-                        <a class="link-light small" href="#!">Privacy Policy</a>                   
+                        <a class="link-light small" href="privacypolicy.html">Privacy Policy</a>                   
                     </div>
                 </div>
             </div>
