--- a/index.html
+++ b/index.html
@@ -81,6 +81,60 @@
                 </div>
             </div>
         </div>
+        <!-- section about charging station-->
+        <section class="py-5 bg-light" id="scroll-target">
+            <div class="container px-5 my-5">
+                <div class="row gx-5 align-items-center">
+                    <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/DroneModel1.png" alt="..." /></div>
+                    <div class="col-lg-6">
+                        <h2 class="fw-bolder">Flight Management &amp; Power Supply</h2>
+                        <p class="lead fw-normal text-muted mb-0">
+
+                            Operators assign drones to calls, which then receive
+                            coordinates, execute tasks, and return to the hangar.<br>
+                            The station uses the main power grid and has emergency batteries
+                            powered by solar panels, providing 6-8 hours of backup.<br>
+
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="py-5">
+            <div class="container px-5 my-5">
+                <div class="row gx-5 align-items-center">
+                    <div class="col-lg-6 order-first order-lg-last"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/DroneModel2.png" alt="..." /></div>
+                    <div class="col-lg-6">
+                        <h2 class="fw-bolder">Safety &amp; Central Computer</h2>
+                        <p class="lead fw-normal text-muted mb-0">
+                           Electrical safety features include surge protection and fire prevention
+                            mechanisms.<br>
+                            Central computer assists in drone assignment and tasks, with options for fiber optic
+                            connectivity.<br>
+
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="py-5 bg-light" id="scroll-target">
+            <div class="container px-5 my-5">
+                <div class="row gx-5 align-items-center">
+                    <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/DroneModel3.png" alt="..." /></div>
+                    <div class="col-lg-6">
+                        <h2 class="fw-bolder">Gates &amp; Charging Modules</h2>
+                        <p class="lead fw-normal text-muted mb-0"> Aluminum roller gates are powered by electric motors, integrated with the central
+                            computer.<br>
+                            Computer Modules use QI wireless charging stations.<br></p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+
         <!-- Blog preview section-->
         <section class="py-5">
             <div class="container px-5 my-5">
