--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@
     </div>
 </section>
 
- <!-- About section two-->
+ <!-- About section four-->
  <section class="py-5">
     <div class="container px-5 my-5">
         <div class="row gx-5 align-items-center">
