--- a/index.html
+++ b/index.html
@@ -133,6 +133,23 @@
             </div>
         </section>
 
+        <section class="py-5">
+            <div class="container px-5 my-5">
+                <div class="row gx-5 align-items-center">
+                    <div class="col-lg-6 order-first order-lg-last"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/ProjectOfSkyline.png" alt="..." /></div>
+                    <div class="col-lg-6">
+                        <h2 class="fw-bolder">Space Organization &amp; Security</h2>
+                        <p class="lead fw-normal text-muted mb-0">
+                            Data and power are managed via Ethernet cables.<br>
+                           Drones are equipped with cameras, motion detection, and biometric authentication
+                            using Aldahua ASI6214S systems.<br>
+        
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
 
 
         <!-- Blog preview section-->
