--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
 
 
-        
+      </main>  
     <!-- Footer-->
     <footer class="bg-dark py-4 mt-auto">
         <div class="container px-5">
