--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section id="partnership">
         <!-- Testimonial section-->
         <div class="py-5 bg-light">
             <div class="container px-5 my-5">
