--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     <div class="small m-0 text-white">Copyright &copy; Skynova 2024</div>
                 </div>
                 <div class="col-auto">
-                    <a class="link-light small" href="privacypolicy.html">Privacy</a>
+                    <a class="link-light small" href="privacypolicy.html">Privacy Policy</a>
                 </div>
             </div>
         </div>
