Colors on main page fixed

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </div>
         </div>
         <!-- section about charging station-->
-        <section class="py-5 bg-light" id="scroll-target">
+        <section class="py-5" id="scroll-target">
             <div class="container px-5 my-5">
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/DroneModel1.png" alt="..." /></div>
@@ -105,7 +105,7 @@
             </div>
         </section>
 
-        <section class="py-5">
+        <section class="py-5 bg-light">
             <div class="container px-5 my-5">
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-6 order-first order-lg-last"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/DroneModel2.png" alt="..." /></div>
@@ -123,7 +123,7 @@
             </div>
         </section>
 
-        <section class="py-5 bg-light" id="scroll-target">
+        <section class="py-5" id="scroll-target">
             <div class="container px-5 my-5">
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/DroneModel3.png" alt="..." /></div>
@@ -137,7 +137,7 @@
             </div>
         </section>
 
-        <section class="py-5">
+        <section class="py-5 bg-light">
             <div class="container px-5 my-5">
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-6 order-first order-lg-last"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/ProjectOfSkyline.png" alt="..." /></div>
