--- a/index.html
+++ b/index.html
@@ -73,18 +73,22 @@
             </div>
         </section id="partnership">
         <!-- Testimonial section-->
-        <div class="py-5 bg-light">
+        <section class="py-5 bg-light">
             <div class="container px-5 my-5">
-                <div class="row gx-5 justify-content-center">
-                    <div class="col-lg-10 col-xl-7">
-                        <div class="text-center">
-                            <h2>Our Partnership</h2>
-                            <div class="fs-4 mb-4">Our partnership integrates Flytbase's digital platform with a specialized company's physical infrastructure for drone deployment. We will jointly design, build, and maintain the hardware while Flytbase manages the digital aspects, enhancing operational efficiency across various industries.</div>
-                        </div>
+                <div class="row gx-5 align-items-center">
+                    <div class="col-lg-6 order-first order-lg-last"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/Partnership.png" alt="Partnership" /></div>
+                    <div class="col-lg-6">
+                        <h2>Our Partnership</h2>
+                        <p class="lead fw-normal text-muted mb-0">
+                            Our partnership integrates Flytbase's digital platform with a specialized company's physical infrastructure for drone deployment. We will jointly design, build, and maintain the hardware while Flytbase manages the digital aspects, enhancing operational efficiency across various industries.
+
+                        </p>
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
+
+        
         <!-- section about charging station-->
         <section class="py-5" id="scroll-target">
             <div class="container px-5 my-5">
