--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-6 order-first order-lg-last"><img class="img-fluid img-partner rounded mb-5 mb-lg-0" src="assets/Partnership.png" alt="Partnership"/></div>
                     <div class="col-lg-6">
-                        <h2 >Our Partnership</h2>
+                        <h2 class="fw-bolder">Our Partnership</h2>
                         <p class="lead fw-normal text-muted mb-0">
                             Our partnership integrates Flytbase's digital platform with a specialized company's physical infrastructure for drone deployment. We will jointly design, build, and maintain the hardware while Flytbase manages the digital aspects, enhancing operational efficiency across various industries.
 
